CP-003. Automatic deployment
refs: CP-003